# golt

./: CLAUDE.md  Cargo.toml  README.md
ecs-cli/: Cargo.toml
ecs-cli/src/: config.rs  main.rs  parser.rs
ecs-cli/src/commands/: build.rs  deploy.rs  generate_keypair.rs  generate_ts.rs  init.rs  list.rs  mod.rs  new_component.rs  new_system.rs  test.rs
ecs-cli/src/generators/: mod.rs
ecs-cli/src/templates/: mod.rs
ecs-macros/: Cargo.toml
ecs-macros/src/: component.rs  instruction.rs  lib.rs  system.rs  utils.rs
ecs-registry/: Cargo.toml
ecs-registry/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
ecs-runtime/: Cargo.toml
ecs-runtime/src/: account.rs  component.rs  delegation.rs  entity.rs  error.rs  instruction.rs  lib.rs  pda.rs
