[package]
name = "golt-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for Golt ECS framework"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true
heck.workspace = true
