[package]
name = "golt-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime library for Golt ECS framework"

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
ephemeral-rollups-pinocchio.workspace = true
thiserror.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
no-entrypoint = []
